--- a/Pareto Frontier.ipynb
+++ b/Pareto Frontier.ipynb
@@ -210,6 +210,7 @@
    },
    "outputs": [],
    "source": [
+    "Credit to Peter : https://stackoverflow.com/questions/32791911/fast-calculation-of-pareto-front-in-python/32793059",
     "def is_pareto_efficient(costs):\n",
     "    \"\"\"\n",
     "    :param costs: An (n_points, n_costs) array\n",
